--- a/css/style.css
+++ b/css/style.css
@@ -142,9 +142,39 @@ p {
 }
 
 
+/* Features
+================================== */
+.features {
+    display: flex;
+    flex-wrap: wrap;
+    /* border: 1px solid red; */
+    margin:90px 0;
+}
 
+.features__item {
+    width: 33.33333%;
+    text-align: center;
+    padding: 0 50px;
+    margin: 25px 0;
+}
 
+.features__icon {
+    margin-bottom: 25px;
+}
 
+.features__title {
+    margin-bottom:20px;
+    font-size:14px;
+    color: #2d3033;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.font__text {
+    font-size: 14px;
+    color:  #6c7279;
+    line-height: 1.5;
+}
 
 
 
