--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,64 @@ p {
     line-height: 1.5;
 }
 
+/* Works
+================================== */
+.works {
+    display: flex;
+    flex-wrap: wrap;
 
+}
 
+.works__item {
+    width: 25%;
+    height: 350px;
+    border-bottom: 1px solid #fff;
+    border-right: 1px solid #fff;
+    position: relative;
+    overflow: hidden;
+}
 
+.works__item .works__content:hover {
+    opacity: 1;
+}
 
+.works__photo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+
+    transform: translate3d(-50%, -50%, 0);
+}
+
+.works__content {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+
+    text-align: center;
+    background-color: rgba(232, 69, 69, 0.9);
+    opacity: 0;
+
+    position: absolute;
+    top:0;
+    left:0;
+    z-index: 2;
+
+    transition: opacity 0.2s linear;
+}
+
+.works__title {
+    margin-bottom: 5px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.works__text {
+    font-size: 14px;
+    color: #fff;
+}
